final alignment fix

--- a/static/css/weather.css
+++ b/static/css/weather.css
@@ -129,13 +129,17 @@ body {
 
 /* Begin media queries */
 @media only screen and (max-width: 767px) {
-    .container {
-        column-gap: 0;
-        left: 0;
-    }
-
     .header {
         display: none;
+    }
+
+    .container {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        column-gap: 0;
+        grid-template-areas: "w"
+                             "waf";
     }
 
     #weather {
@@ -150,4 +154,18 @@ body {
         left: 50%;
         transform: translate(-50%, -50%);
     }
+
+    .header {
+        font-size: 6em;
+    }
+
+    #weather > #curr_conditions {
+        font-size: 2.5em;
+    }
+
+    #weather > #temps > #temp_max,
+    #weather > #temps > #temp_min {
+        font-size: 3em;
+    }
+
 }
